--- a/Code/Task/Dataset/creating_dataset.ipynb
+++ b/Code/Task/Dataset/creating_dataset.ipynb
@@ -2,21 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "802f8ec4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# Проверяем, существует ли текстовый файл\u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(txt_path):\n\u001b[1;32m---> 20\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtxt_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     21\u001b[0m         text \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;66;03m# Формируем путь относительно Dataset и с прямыми слешами\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m<frozen codecs>:309\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, errors)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV файл создан: e:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\git_dataset.csv\n"
      ]
     }
    ],
@@ -53,7 +47,16 @@
     "\n",
     "# Создаем DataFrame и сохраняем в CSV\n",
     "df = pd.DataFrame(data)\n",
-    "csv_path = os.path.join(dataset_dir, \"dataset.csv\")\n",
+    "\n",
+    "df['text'] = df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
+    "\n",
+    "df['text'] = df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "\n",
+    "df['text'] = df['text'].str.lower()\n",
+    "\n",
+    "df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
+    "\n",
+    "csv_path = os.path.join(dataset_dir, \"git_dataset.csv\")\n",
     "df.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
     "\n",
     "print(f\"CSV файл создан: {csv_path}\")\n"
@@ -61,29 +64,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "566fa8dc",
+   "execution_count": 6,
+   "id": "63767ff5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\clip_durations.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\dev.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\invalidated.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\other.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\reported.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\test.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\train.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\unvalidated_sentences.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\validated.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\validated_sentences.tsv']\n",
+      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\clip_durations.tsv, нет нужных колонок\n",
+      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\reported.tsv, нет нужных колонок\n",
+      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\unvalidated_sentences.tsv, нет нужных колонок\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\follo\\AppData\\Local\\Temp\\ipykernel_4304\\2977180630.py:19: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file, sep=\"\\t\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\validated_sentences.tsv, нет нужных колонок\n",
+      "Датасет успешно создан: maz_dataset.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
+    "import glob\n",
+    "import os\n",
+    "import re\n",
     "\n",
-    "csv_path = \"dataset.csv\"\n",
+    "# Папка с вашими .tsv файлами\n",
+    "folder_path = r\"E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\"\n",
     "\n",
-    "# Загружаем CSV\n",
-    "df = pd.read_csv(csv_path)\n",
     "\n",
-    "df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
+    "# Получаем список всех .tsv файлов\n",
+    "tsv_files = glob.glob(os.path.join(folder_path, \"**\", \"*.tsv\"))\n",
+    "print(tsv_files)\n",
+    "# Список для хранения датафреймов\n",
+    "dataframes = []\n",
     "\n",
-    "df = pd.DataFrame(df)\n",
-    "csv_path = os.path.join(dataset_dir, \"full_dataset.csv\")\n",
-    "df.to_csv(csv_path, index=False, encoding=\"utf-8\")"
+    "for file in tsv_files:\n",
+    "    try:\n",
+    "        # Читаем файл\n",
+    "        df = pd.read_csv(file, sep=\"\\t\")\n",
+    "\n",
+    "        # Проверяем, есть ли колонки 'path' и 'text'\n",
+    "        if 'path' in df.columns and 'sentence' in df.columns:\n",
+    "            # Берем только нужные колонки\n",
+    "            df = df[['path', 'sentence']].rename(columns={'sentence': 'text'})\n",
+    "            dataframes.append(df)\n",
+    "        else:\n",
+    "            print(f\"Пропущен файл {file}, нет нужных колонок\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Ошибка при чтении файла {file}: {e}\")\n",
+    "\n",
+    "# Объединяем все датафреймы в один\n",
+    "if dataframes:\n",
+    "    moz_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    # Оставляем только буквы и пробелы\n",
+    "    moz_df['text'] = moz_df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
+    "\n",
+    "    # Убираем лишние пробелы\n",
+    "    moz_df['text'] = moz_df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "\n",
+    "    # Приводим к нижнему регистру\n",
+    "    moz_df['text'] = moz_df['text'].str.lower()\n",
+    "    # Сохраняем результат\n",
+    "\n",
+    "    moz_df[\"path\"] = \"Dataset/cv-corpus-23.0-2025-09-05/ru/clips\" + moz_df[\"path\"]\n",
+    "\n",
+    "    moz_df.to_csv(\"moz_dataset.csv\", index=False)\n",
+    "    print(\"Датасет успешно создан: maz_dataset.csv\")\n",
+    "else:\n",
+    "    print(\"Нет файлов с нужными колонками\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "id": "e5e0a076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/git_dataset.csv')\n",
+    "df2 = pd.read_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/moz_dataset.csv')\n",
+    "\n",
+    "final_df = pd.concat([df1, df2], ignore_index=True)\n",
+    "\n",
+    "final_df.to_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/final_dataset.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "08f13b44",
    "metadata": {},
    "outputs": [
@@ -97,9 +179,9 @@
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (from pandas) (2025.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\follo\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Train: 22488\n",
-      "Validation: 2811\n",
-      "Test: 2812\n"
+      "Train: 220901\n",
+      "Validation: 27613\n",
+      "Test: 27613\n"
      ]
     }
    ],
@@ -108,7 +190,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "df = pd.read_csv(\"full_dataset.csv\")\n",
+    "df = pd.read_csv(\"final_dataset.csv\")\n",
     "\n",
     "train_df, temp_df = train_test_split(\n",
     "    df,\n",
