Почистил немного код

--- a/Code/Task/Dataset/convert.ipynb
+++ b/Code/Task/Dataset/convert.ipynb
@@ -2,7 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "64b42b12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pydub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91c90a21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pydub import AudioSegment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eec6ae60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mp3_folder = \"E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/cv-corpus-23.0-2025-09-05/ru/clips\"\n",
+    "wav_folder = \"E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/cv-corpus-23.0-2025-09-05/ru/clips_wav\"\n",
+    "os.makedirs(wav_folder, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f2386293",
    "metadata": {},
    "outputs": [
@@ -16,36 +49,23 @@
     }
    ],
    "source": [
-    "!pip install pydub\n",
-    "\n",
-    "import os\n",
-    "from pydub import AudioSegment\n",
-    "\n",
-    "# ---------------------------\n",
-    "# Настройки\n",
-    "# ---------------------------\n",
-    "mp3_folder = \"E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/cv-corpus-23.0-2025-09-05/ru/clips\"  # папка с mp3\n",
-    "wav_folder = \"E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/cv-corpus-23.0-2025-09-05/ru/clips_wav\"  # куда сохранять wav\n",
-    "os.makedirs(wav_folder, exist_ok=True)\n",
-    "\n",
-    "# ---------------------------\n",
-    "# Конвертация\n",
-    "# ---------------------------\n",
     "for filename in os.listdir(mp3_folder):\n",
     "    if not filename.lower().endswith(\".mp3\"):\n",
     "        continue\n",
+    "\n",
     "\n",
     "    mp3_path = os.path.join(mp3_folder, filename)\n",
     "    wav_filename = os.path.splitext(filename)[0] + \".wav\"\n",
     "    wav_path = os.path.join(wav_folder, wav_filename)\n",
     "\n",
-    "    # Конвертируем mp3 -> wav\n",
+    "\n",
     "    audio = AudioSegment.from_mp3(mp3_path)\n",
-    "    audio = audio.set_channels(1)        # моно\n",
-    "    audio = audio.set_frame_rate(16000)  # 16 kHz\n",
+    "    audio = audio.set_channels(1)\n",
+    "    audio = audio.set_frame_rate(16000)\n",
     "    audio.export(wav_path, format=\"wav\")\n",
     "\n",
-    "print(\"Конвертация всех MP3 в WAV завершена!\")\n"
+    "\n",
+    "print(\"Конвертация всех MP3 в WAV завершена!\")"
    ]
   }
  ],
