--- a/Code/Task/Dataset/creating_dataset.ipynb
+++ b/Code/Task/Dataset/creating_dataset.ipynb
@@ -2,7 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "87dcaf5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49ff7db2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import os\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e45b7af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_dir = os.getcwd()\n",
+    "data = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "802f8ec4",
    "metadata": {},
    "outputs": [
@@ -15,47 +50,44 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Корневая папка с датасетом (текущая папка, где будет ноутбук)\n",
-    "dataset_dir = os.getcwd()\n",
-    "\n",
-    "# Список для хранения данных\n",
-    "data = []\n",
-    "\n",
-    "# Проходим по всем подпапкам\n",
     "for root, dirs, files in os.walk(dataset_dir):\n",
+    "\n",
     "    for file in files:\n",
+    "\n",
     "        if file.endswith(\".wav\"):\n",
     "            wav_path = os.path.join(root, file)\n",
     "            txt_file = file.replace(\".wav\", \".txt\")\n",
     "            txt_path = os.path.join(root, txt_file)\n",
     "\n",
-    "            # Проверяем, существует ли текстовый файл\n",
+    "\n",
     "            if os.path.exists(txt_path):\n",
     "                with open(txt_path, \"r\", encoding=\"utf-8\") as f:\n",
     "                    text = f.read().strip()\n",
     "                \n",
-    "                # Формируем путь относительно Dataset и с прямыми слешами\n",
+    "\n",
     "                rel_path = os.path.relpath(wav_path, dataset_dir).replace(\"\\\\\", \"/\")\n",
     "                \n",
+    "\n",
     "                data.append({\n",
     "                    \"path\": rel_path,\n",
     "                    \"text\": text\n",
     "                })\n",
     "\n",
-    "# Создаем DataFrame и сохраняем в CSV\n",
-    "df = pd.DataFrame(data)\n",
     "\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efb0903a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['text'] = df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
-    "\n",
     "df['text'] = df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
-    "\n",
     "df['text'] = df['text'].str.lower()\n",
-    "\n",
     "df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
-    "\n",
     "csv_path = os.path.join(dataset_dir, \"git_dataset.csv\")\n",
     "df.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
     "\n",
@@ -64,7 +96,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "db067bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = r\"E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\"\n",
+    "tsv_files = glob.glob(os.path.join(folder_path, \"**\", \"*.tsv\"))\n",
+    "print(tsv_files)\n",
+    "dataframes = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "339a6283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in tsv_files:\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        df = pd.read_csv(file, sep=\"\\t\")\n",
+    "\n",
+    "\n",
+    "        if 'path' in df.columns and 'sentence' in df.columns:\n",
+    "            df = df[['path', 'sentence']].rename(columns={'sentence': 'text'})\n",
+    "            dataframes.append(df)\n",
+    "        else:\n",
+    "            print(f\"Пропущен файл {file}, нет нужных колонок\")\n",
+    "\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Ошибка при чтении файла {file}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "63767ff5",
    "metadata": {},
    "outputs": [
@@ -82,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\follo\\AppData\\Local\\Temp\\ipykernel_4304\\2977180630.py:19: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\follo\\AppData\\Local\\Temp\\ipykernel_19900\\1002259324.py:19: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(file, sep=\"\\t\")\n"
      ]
     },
@@ -96,61 +166,22 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import glob\n",
-    "import os\n",
-    "import re\n",
-    "\n",
-    "# Папка с вашими .tsv файлами\n",
-    "folder_path = r\"E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\"\n",
-    "\n",
-    "\n",
-    "# Получаем список всех .tsv файлов\n",
-    "tsv_files = glob.glob(os.path.join(folder_path, \"**\", \"*.tsv\"))\n",
-    "print(tsv_files)\n",
-    "# Список для хранения датафреймов\n",
-    "dataframes = []\n",
-    "\n",
-    "for file in tsv_files:\n",
-    "    try:\n",
-    "        # Читаем файл\n",
-    "        df = pd.read_csv(file, sep=\"\\t\")\n",
-    "\n",
-    "        # Проверяем, есть ли колонки 'path' и 'text'\n",
-    "        if 'path' in df.columns and 'sentence' in df.columns:\n",
-    "            # Берем только нужные колонки\n",
-    "            df = df[['path', 'sentence']].rename(columns={'sentence': 'text'})\n",
-    "            dataframes.append(df)\n",
-    "        else:\n",
-    "            print(f\"Пропущен файл {file}, нет нужных колонок\")\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Ошибка при чтении файла {file}: {e}\")\n",
-    "\n",
-    "# Объединяем все датафреймы в один\n",
     "if dataframes:\n",
     "    moz_df = pd.concat(dataframes, ignore_index=True)\n",
-    "    # Оставляем только буквы и пробелы\n",
     "    moz_df['text'] = moz_df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
-    "\n",
-    "    # Убираем лишние пробелы\n",
     "    moz_df['text'] = moz_df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
-    "\n",
-    "    # Приводим к нижнему регистру\n",
     "    moz_df['text'] = moz_df['text'].str.lower()\n",
-    "    # Сохраняем результат\n",
-    "\n",
-    "    moz_df[\"path\"] = \"Dataset/cv-corpus-23.0-2025-09-05/ru/clips\" + moz_df[\"path\"]\n",
-    "\n",
+    "    moz_df[\"path\"] = \"Dataset/cv-corpus-23.0-2025-09-05/ru/clips_wav/\" + moz_df[\"path\"]\n",
+    "    moz_df[\"path\"] = moz_df[\"path\"].str.replace(\".mp3\", \".wav\", regex=False)\n",
     "    moz_df.to_csv(\"moz_dataset.csv\", index=False)\n",
-    "    print(\"Датасет успешно создан: maz_dataset.csv\")\n",
+    "    print(\"Датасет успешно создан: moz_dataset.csv\")\n",
     "else:\n",
     "    print(\"Нет файлов с нужными колонками\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "e5e0a076",
    "metadata": {},
    "outputs": [],
@@ -165,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "08f13b44",
    "metadata": {},
    "outputs": [
@@ -186,31 +217,30 @@
     }
    ],
    "source": [
-    "!pip install pandas\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "df = pd.read_csv(\"final_dataset.csv\")\n",
+    "\n",
     "\n",
     "train_df, temp_df = train_test_split(\n",
     "    df,\n",
-    "    test_size=0.2,       # 20% уйдёт на val+test\n",
+    "    test_size=0.2, \n",
     "    random_state=42,\n",
     "    shuffle=True\n",
     ")\n",
     "\n",
+    "\n",
     "val_df, test_df = train_test_split(\n",
     "    temp_df,\n",
-    "    test_size=0.5,       # половина temp → test, половина → val\n",
+    "    test_size=0.5,\n",
     "    random_state=42,\n",
     "    shuffle=True\n",
     ")\n",
+    "\n",
     "\n",
     "print(\"Train:\", len(train_df))\n",
     "print(\"Validation:\", len(val_df))\n",
     "print(\"Test:\", len(test_df))\n",
     "\n",
-    "# 4️⃣ При желании сохраняем в CSV\n",
+    "\n",
     "train_df.to_csv(\"train.csv\", index=False)\n",
     "val_df.to_csv(\"val.csv\", index=False)\n",
     "test_df.to_csv(\"test.csv\", index=False)"
