--- a/Code/Task/Training/test_wav2vec2.ipynb
+++ b/Code/Task/Training/test_wav2vec2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "b50fad90",
    "metadata": {},
    "outputs": [
@@ -73,12 +73,28 @@
     }
    ],
    "source": [
-    "%pip install transformers datasets torchaudio soundfile peft jiwer\n"
+    "%pip install transformers datasets torchaudio soundfile peft jiwer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "245a9fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchaudio\n",
+    "import pandas as pd\n",
+    "from datasets import Dataset\n",
+    "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor, Trainer, TrainingArguments\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Any"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "661cd271",
    "metadata": {},
    "outputs": [
@@ -92,41 +108,26 @@
     }
    ],
    "source": [
-    "from transformers import Wav2Vec2ForCTC, Wav2Vec2Processor\n",
-    "import torch\n",
-    "\n",
-    "# Английская небольшая модель, плохо знающая русский\n",
     "model_name = \"facebook/wav2vec2-base-960h\"\n",
-    "\n",
-    "# Загружаем модель и процессор (feature_extractor + tokenizer)\n",
     "processor = Wav2Vec2Processor.from_pretrained(model_name)\n",
-    "model = Wav2Vec2ForCTC.from_pretrained(model_name)\n"
+    "model = Wav2Vec2ForCTC.from_pretrained(model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f00410f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from datasets import Dataset\n",
-    "\n",
     "csv_path = \"Dataset/dataset.csv\"\n",
-    "\n",
-    "# Загружаем CSV\n",
     "df = pd.read_csv(csv_path)\n",
-    "\n",
-    "df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
-    "dataset = Dataset.from_pandas(df)\n",
-    "\n",
-    "\n"
+    "dataset = Dataset.from_pandas(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "cf688a0f",
    "metadata": {},
    "outputs": [
@@ -139,62 +140,51 @@
     }
    ],
    "source": [
-    "import torchaudio\n",
-    "\n",
     "def preprocess(batch):\n",
-    "    # Загружаем аудио\n",
-    "    speech_array, sr = torchaudio.load(batch[\"path\"])\n",
     "    \n",
-    "    # Ресемплинг до 16 кГц\n",
+    "    speech_array, sr = torchaudio.load(batch[\"path\"])\n",
     "    if sr != 16000:\n",
     "        speech_array = torchaudio.functional.resample(speech_array, sr, 16000)\n",
-    "    \n",
-    "    # Преобразуем в input_values\n",
     "    batch[\"input_values\"] = processor(speech_array.squeeze().numpy(), sampling_rate=16000).input_values[0]\n",
-    "    \n",
-    "    # Токенизируем текст в labels\n",
     "    batch[\"labels\"] = processor.tokenizer(batch[\"text\"]).input_ids\n",
-    "    \n",
     "    return batch\n",
+    "\n",
     "\n",
     "dataset = dataset.map(preprocess)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0f232671",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass\n",
-    "from typing import Any, Dict, List, Union\n",
-    "\n",
     "@dataclass\n",
     "class MyDataCollatorCTC:\n",
     "    processor: Any\n",
     "\n",
     "    def __call__(self, features):\n",
-    "        # features — это список словарей {\"input_values\": ..., \"labels\": ...}\n",
+    "\n",
     "        input_values = [torch.tensor(f[\"input_values\"], dtype=torch.float32) for f in features]\n",
     "        labels = [torch.tensor(f[\"labels\"], dtype=torch.long) for f in features]\n",
     "\n",
-    "        # паддинг для аудио\n",
     "        batch_inputs = self.processor.feature_extractor.pad(\n",
     "            {\"input_values\": input_values},\n",
     "            return_tensors=\"pt\"\n",
     "        )\n",
     "\n",
-    "        # паддинг для текста\n",
+    "\n",
     "        labels_batch = self.processor.tokenizer.pad(\n",
     "            {\"input_ids\": labels},\n",
     "            return_tensors=\"pt\"\n",
     "        )\n",
     "\n",
-    "        # pad_token_id -> -100\n",
+    "\n",
     "        labels = labels_batch[\"input_ids\"].masked_fill(\n",
     "            labels_batch[\"input_ids\"] == self.processor.tokenizer.pad_token_id, -100\n",
     "        )\n",
+    "\n",
     "\n",
     "        batch_inputs[\"labels\"] = labels\n",
     "        return batch_inputs\n",
@@ -205,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ee7859f2",
    "metadata": {},
    "outputs": [
@@ -536,8 +526,6 @@
     }
    ],
    "source": [
-    "from transformers import Trainer, TrainingArguments\n",
-    "\n",
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./wav2vec2-finetuned\",\n",
     "    per_device_train_batch_size=4,\n",
