--- a/Code/Task/Training/test_whisper.ipynb
+++ b/Code/Task/Training/test_whisper.ipynb
@@ -23,21 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "29e42c8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = \"openai/whisper-small\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "21b9d4b7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_name = \"openai/whisper-small\"\n",
     "processor = WhisperProcessor.from_pretrained(model_name)\n",
     "feature_extractor = processor.feature_extractor\n",
     "tokenizer = processor.tokenizer\n",
@@ -56,14 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "29731371",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(batch):\n",
+    "\n",
     "    waveform, sr = torchaudio.load(batch[\"path\"])\n",
     "    waveform = waveform.mean(dim=0).numpy()\n",
+    "\n",
     "\n",
     "    inputs = feature_extractor(\n",
     "        waveform,\n",
@@ -71,10 +64,12 @@
     "        return_tensors=\"pt\"\n",
     "    )\n",
     "\n",
+    "\n",
     "    labels = tokenizer(\n",
     "        batch[\"text\"],\n",
     "        return_tensors=\"pt\"\n",
     "    ).input_ids\n",
+    "\n",
     "\n",
     "    batch[\"input_features\"] = inputs.input_features[0]\n",
     "    batch[\"labels\"] = labels[0]\n",
@@ -102,39 +97,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d4658426",
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataCollatorSpeechSeq2SeqWithPadding:\n",
-    "    \"\"\"\n",
-    "    Коллатор специально для Whisper: делает padding\n",
-    "    и для input_features, и для labels.\n",
-    "    \"\"\"\n",
     "\n",
     "    def __init__(self, processor):\n",
     "        self.processor = processor\n",
     "\n",
+    "\n",
     "    def __call__(self, features):\n",
-    "        # входные признаки (мел-спектрограммы)\n",
     "        input_features = [{\"input_features\": f[\"input_features\"]} for f in features]\n",
     "        batch = self.processor.feature_extractor.pad(\n",
     "            input_features,\n",
     "            return_tensors=\"pt\"\n",
     "        )\n",
     "\n",
-    "        # текстовые метки\n",
+    "\n",
     "        label_features = [{\"input_ids\": f[\"labels\"]} for f in features]\n",
     "        labels_batch = self.processor.tokenizer.pad(\n",
     "            label_features,\n",
     "            return_tensors=\"pt\"\n",
     "        )\n",
     "\n",
-    "        # заменяем паддинг на -100 для PyTorch loss\n",
+    "\n",
     "        labels = labels_batch[\"input_ids\"].masked_fill(\n",
     "            labels_batch.attention_mask.ne(1), -100\n",
     "        )\n",
+    "\n",
     "\n",
     "        batch[\"labels\"] = labels\n",
     "        return batch"
@@ -152,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3f51654f",
    "metadata": {},
    "outputs": [
@@ -236,8 +228,8 @@
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=dataset,\n",
-    "    tokenizer=tokenizer,              # ВАЖНО!\n",
-    "    data_collator=data_collator       # ВАЖНО!\n",
+    "    tokenizer=tokenizer,\n",
+    "    data_collator=data_collator\n",
     ")\n",
     "\n",
     "trainer.train()"
