Почти все наработки

--- a/Code/Task/Dataset/creating_dataset.ipynb
+++ b/Code/Task/Dataset/creating_dataset.ipynb
@@ -2,17 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87dcaf5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49ff7db2",
    "metadata": {},
    "outputs": [],
@@ -26,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e45b7af2",
    "metadata": {},
    "outputs": [],
@@ -37,18 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "802f8ec4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CSV файл создан: e:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\git_dataset.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for root, dirs, files in os.walk(dataset_dir):\n",
     "\n",
@@ -79,27 +61,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "efb0903a",
+   "execution_count": 5,
+   "id": "c2b61566",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV файл создан: e:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\git_dataset.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "df['text'] = df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
-    "df['text'] = df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "df['text'] = df['text'].astype(str)\n",
+    "df['text'] = df['text'].str.lower()\n",
+    "df['text'] = df['text'].str.replace(r'[^а-яё\\s]', '', regex=True)\n",
+    "df['text'] = df['text'].str.replace(r'\\s+', ' ', regex=True)\n",
+    "df['text'] = df['text'].str.strip()\n",
     "df['text'] = df['text'].str.lower()\n",
     "df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
     "csv_path = os.path.join(dataset_dir, \"git_dataset.csv\")\n",
     "df.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
     "\n",
-    "print(f\"CSV файл создан: {csv_path}\")\n"
+    "print(f\"CSV файл создан: {csv_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "db067bb2",
+   "execution_count": 6,
+   "id": "efb0903a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# df['text'] = df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
+    "# df['text'] = df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "# df['text'] = df['text'].str.replace('`', '', regex=False)\n",
+    "# df['text'] = df['text'].str.lower()\n",
+    "# df[\"path\"] = \"Dataset/\" + df[\"path\"]\n",
+    "# csv_path = os.path.join(dataset_dir, \"git_dataset.csv\")\n",
+    "# df.to_csv(csv_path, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "# print(f\"CSV файл создан: {csv_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db067bb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\dev.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\invalidated.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\other.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\test.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\train.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\validated_sentences.tsv']\n"
+     ]
+    }
+   ],
    "source": [
     "folder_path = r\"E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\"\n",
     "tsv_files = glob.glob(os.path.join(folder_path, \"**\", \"*.tsv\"))\n",
@@ -109,10 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "339a6283",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\validated_sentences.tsv, нет нужных колонок\n"
+     ]
+    }
+   ],
    "source": [
     "for file in tsv_files:\n",
     "\n",
@@ -134,62 +161,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63767ff5",
+   "execution_count": 9,
+   "id": "1e357e0a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\clip_durations.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\dev.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\invalidated.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\other.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\reported.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\test.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\train.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\unvalidated_sentences.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\validated.tsv', 'E:\\\\Education\\\\4 course 1 semester\\\\Course project\\\\Shards_prodject\\\\Code\\\\Task\\\\Dataset\\\\cv-corpus-23.0-2025-09-05\\\\ru\\\\validated_sentences.tsv']\n",
-      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\clip_durations.tsv, нет нужных колонок\n",
-      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\reported.tsv, нет нужных колонок\n",
-      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\unvalidated_sentences.tsv, нет нужных колонок\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\follo\\AppData\\Local\\Temp\\ipykernel_19900\\1002259324.py:19: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, sep=\"\\t\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Пропущен файл E:\\Education\\4 course 1 semester\\Course project\\Shards_prodject\\Code\\Task\\Dataset\\cv-corpus-23.0-2025-09-05\\ru\\validated_sentences.tsv, нет нужных колонок\n",
-      "Датасет успешно создан: maz_dataset.csv\n"
+      "Датасет успешно создан: moz_dataset.csv\n"
      ]
     }
    ],
    "source": [
     "if dataframes:\n",
     "    moz_df = pd.concat(dataframes, ignore_index=True)\n",
-    "    moz_df['text'] = moz_df['text'].str.replace(r'[^A-Za-zА-Яа-яЁё\\s]', '', regex=True)\n",
-    "    moz_df['text'] = moz_df['text'].str.strip().str.replace(r'\\s+', ' ', regex=True)\n",
+    "    moz_df['text'] = moz_df['text'].astype(str)\n",
     "    moz_df['text'] = moz_df['text'].str.lower()\n",
-    "    moz_df[\"path\"] = \"Dataset/cv-corpus-23.0-2025-09-05/ru/clips_wav/\" + moz_df[\"path\"]\n",
-    "    moz_df[\"path\"] = moz_df[\"path\"].str.replace(\".mp3\", \".wav\", regex=False)\n",
+    "    moz_df['text'] = moz_df['text'].str.replace(r'[^а-яё\\s]', '', regex=True)\n",
+    "    moz_df['text'] = moz_df['text'].str.replace(r'\\s+', ' ', regex=True)\n",
+    "    moz_df['text'] = moz_df['text'].str.strip()\n",
+    "    moz_df['text'] = moz_df['text'].str.lower()\n",
+    "    moz_df[\"path\"] = \"Dataset/cv-corpus-23.0-2025-09-05/ru/clips/\" + moz_df[\"path\"]\n",
     "    moz_df.to_csv(\"moz_dataset.csv\", index=False)\n",
     "    print(\"Датасет успешно создан: moz_dataset.csv\")\n",
     "else:\n",
-    "    print(\"Нет файлов с нужными колонками\")\n"
+    "    print(\"Нет файлов с нужными колонками\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e5e0a076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.read_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/git_dataset.csv')\n",
     "df2 = pd.read_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/moz_dataset.csv')\n",
     "\n",
     "final_df = pd.concat([df1, df2], ignore_index=True)\n",
+    "print(final_df['text'].isna().sum())\n",
+    "final_df = final_df.dropna(subset=['text'])\n",
+    "print(final_df['text'].isna().sum())\n",
+    "\n",
     "\n",
     "final_df.to_csv('E:/Education/4 course 1 semester/Course project/Shards_prodject/Code/Task/Dataset/final_dataset.csv', index=False)"
    ]
@@ -204,15 +227,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (2.3.0)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (from pandas) (2.0.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\follo\\appdata\\roaming\\python\\python312\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\follo\\anaconda3\\envs\\gpu\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\follo\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Train: 220901\n",
-      "Validation: 27613\n",
-      "Test: 27613\n"
+      "Train: 82616\n",
+      "Validation: 10327\n",
+      "Test: 10328\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
